<resources>
    <string name="app_name">ThesisApplication</string>

    <!-- Sign in strings -->
    <string name="welcome_back_img"> Welcome back banner image </string>
    <string name="sign_in_title"> Let\'s sign you in </string>
    <string name="welcome_back_sign_in"> Welcome back, we\'ve missed you </string>
    <string name="sign_in_email_placeholder"> Your email address </string>
    <string name="sign_in_password_placeholder"> Your password </string>
    <string name="forgot_password"> Forgot password? </string>
    <string name="sign_in_btn"> Sign In </string>
    <string name="do_not_have_an_account"> Don\'t have an account? </string>
    <string name="go_to_sign_up"> Let\'s create one </string>

    <!-- Sign up strings -->
    <string name="welcome_sign_up_img"> Welcome banner image </string>
    <string name="sign_up_title"> Let\'s sign you up </string>
    <string name="welcome_sign_up"> Welcome here with us! Glad to have you </string>
    <string name="confirm_password"> Confirm your password </string>
    <string name="sign_up_btn"> Sign Up </string>
    <string name="already_have_an_account"> Already have an account? </string>
    <string name="go_to_sign_in"> Let\'s sign you in </string>

    <!-- Bottom navigation menu titles -->
    <string name="home_screen_title">Home</string>
    <string name="search_screen_title">Search</string>
    <string name="account_screen_title">Account</string>

    <!-- Home screen strings -->
    <string name="welcome_home_screen"> Hello, Andrei! </string>
    <string name="frontal_banner_text"> See our week\'s best \nrated recipe </string>
    <string name="frontal_banner_btn"> Check recipe </string>
    <string name="first_time_customer"> You haven\'t rated any recipes yet, so \nwe give you our top choices: </string>
    <string name="recurring_customer">  Based on your recent likes, we\nthink you might like these: </string>
    <string name="thirty_minute_recipe"> 30-minute recipes </string>
    <string name="recipe_instance">Recipe instance</string>
    <string name="save_recipe_btn">save recipe button</string>
    <string name="like_recipe_btn">like recipe button</string>
    <string name="thirty_minute_recipes">30-minute recipes</string>
    <string name="search_bar_placeholder">Search for a recipe...</string>
    <string name="back_button">Back button</string>
    <string name="rating_stars">Rating stars</string>
    <string name="ingredients_textview">Ingredients  •</string>
    <string name="recipe_description"> Description </string>
    <string name="recipe_nutrition">Nutrition (per serving)</string>
    <string name="steps_textview">Steps •</string>
    <string name="user_account_name">Andrei Iacob</string>
    <string name="account_email_address">andrei_iacob@yahoo.com</string>
    <string name="edit_profile_btn">Edit profile</string>
    <string name="search_recipe_response">Search recipe response</string>
    <string name="favorite_tab">Your favorite recipes\nwill be hear</string>
    <string name="saved_tab">Your saved recipes\nwill be hear</string>
    <string name="my_reviews_tab">Your reviews\nwill be hear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>