<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentification.RegisterActivity">

        <ImageView
            android:id="@+id/sign_up_img"
            android:layout_width="261dp"
            android:layout_height="229dp"
            android:layout_marginTop="@dimen/large_spacing"
            android:contentDescription="@string/welcome_sign_up_img"
            android:src="@drawable/ic_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_up_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/large_spacing"
            android:contentDescription="@string/sign_up_title"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/sign_up_title"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_welcome_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_img"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/sign_up_title" />

        <TextView
            android:id="@+id/sign_up_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:contentDescription="@string/welcome_sign_up"
            android:fontFamily="@font/nunito"
            android:text="@string/welcome_sign_up"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_header"
            tools:text="@string/welcome_sign_up" />

        <EditText
            android:id="@+id/email_signup"
            style="@style/input_text_box_login"
            android:hint="@string/sign_in_email_placeholder"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_welcome_text" />

        <EditText
            android:id="@+id/password_signup"
            style="@style/input_text_box_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:hint="@string/sign_in_password_placeholder"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_signup"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/confirm_password_signup"
            style="@style/input_text_box_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/normal_spacing"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_signup"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/normal_spacing"
            android:backgroundTint="@color/btn_color"
            android:contentDescription="@string/sign_up_btn"
            android:text="@string/sign_up_btn"
            app:cornerRadius="@android:dimen/notification_large_icon_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_signup"
            app:strokeColor="@color/white"
            tools:ignore="TextContrastCheck"
            tools:text="@string/sign_up_btn" />

        <TextView
            android:id="@+id/already_have_account"
            style="@style/small_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/already_have_an_account"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toStartOf="@+id/login_with_account"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

        <TextView
            android:id="@+id/login_with_account"
            style="@style/small_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/go_to_sign_in"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/go_to_sign_in"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/already_have_account"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn"
            tools:text="@string/go_to_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>
