<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.HomeFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.thesisapplication.home.HomeViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/extra_large_spacing"
        android:overScrollMode="never"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_home"
                style="@style/header_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/welcome_home_screen"
                android:text="@string/welcome_home_screen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/welcome_home_screen" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/profile_picture"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/banner_card_view"
                android:layout_width="380dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:innerRadius="10dp"
                android:shape="ring"
                android:thicknessRatio="4"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/frontal_banner_text"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home_page_banner_image" />

                <TextView
                    android:id="@+id/presentation_banner_text"
                    style="@style/presentation_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:lines="2"
                    android:text="@string/frontal_banner_text"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/banner_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_spacing"
                    android:layout_marginTop="82dp"
                    android:text="@string/frontal_banner_btn" />
            </androidx.cardview.widget.CardView>

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="32dp"-->
<!--                android:text="@{viewModel.errorText}"-->
<!--                tools:text="Nothing is showing"-->
<!--                android:textSize="18sp"-->
<!--                android:fontFamily="@font/nunito_extrabold"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/banner_card_view" />-->

            <TextView
                android:id="@+id/recommendation_category_textview"
                style="@style/presentation_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_spacing"
                android:layout_marginTop="@dimen/large_spacing"
                android:text="@string/first_time_customer"
                android:textStyle="bold"
                android:fontFamily="@font/nunito_extrabold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner_card_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendended_recipe_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:clipToPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendation_category_textview"
                app:listData="@{viewModel.recipes}"
                tools:listitem="@layout/recipe_property_fragment"
                />

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendation_category_textview"
                android:contentDescription="@string/recipe_description"
                app:recipeApiStatus="@{viewModel.status}" />

            <TextView
                android:id="@+id/thirty_minutes_recipes_textview"
                style="@style/presentation_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_spacing"
                android:layout_marginStart="@dimen/normal_spacing"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/thirty_minute_recipes"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendended_recipe_list" />

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/under_thirty_recipe_list"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--                android:orientation="horizontal"-->
<!--                android:clipToPadding="false"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/thirty_minutes_recipes_textview"-->
<!--                app:listData="@{viewModel.underThirtyRecipes}"-->
<!--                tools:listitem="@layout/recipe_property_fragment"-->
<!--                />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
