<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.thesisapplication.account.AccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".account.AccountFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/large_spacing"
            android:src="@drawable/profile_picture"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_profile_picture"
            style="@style/recipe_field_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@string/user_account_name"
            app:layout_constraintBottom_toTopOf="@+id/account_email_address"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toTopOf="@+id/profile_picture"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/account_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito"
            android:text="@string/account_email_address"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toBottomOf="@+id/account_profile_picture" />

        <Button
            android:id="@+id/edit_profile_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:padding="@dimen/small_spacing"
            android:text="@string/edit_profile_btn"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toBottomOf="@+id/account_email_address" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_spacing"
            android:layout_marginTop="@dimen/large_spacing"
            android:layout_marginEnd="@dimen/normal_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture"
            app:tabGravity="fill"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabTextColor="@color/black"
            />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginBottom="@dimen/normal_spacing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
